--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,17 @@ dependencies {
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
 
+    implementation(libs.retrofit)
+    implementation(libs.converter.gson)
+
+    // OkHttp
+    implementation(libs.okhttp)
+    implementation(libs.logging.interceptor)
+
+    // Coroutines
+    implementation(libs.kotlinx.coroutines.core)
+    implementation(libs.kotlinx.coroutines.android)
+
     implementation libs.androidx.material.icons.extended
     implementation libs.androidx.navigation.compose
     testImplementation libs.junit
